@@ -1,14 +1,15 @@
 dnl
-dnl GNOME_ORBIT_HOOK (script-if-orbit-found, failflat)
+dnl GNOME_ORBIT_HOOK (script-if-orbit-found, failflag)
 dnl
 dnl if failflag is "failure" it aborts if orbit is not found.
 dnl
 
 AC_DEFUN([GNOME_ORBIT_HOOK],[
 	AC_PATH_PROG(ORBIT_CONFIG,orbit-config,no)
-	if test x$ORBIT_CONFIG = xno; then
-	    	if test x$2 = failure; then	
-			AC_MSG_ERROR(Could not find orbit-config)
+	AC_PATH_PROG(ORBIT_IDL,orbit-idl,no)
+	if test x$ORBIT_CONFIG = xno -o x$ORBIT_IDL = xno; then
+	    	if test x$2 = xfailure; then
+			AC_MSG_ERROR(Could not find orbit-config or orbit-idl)
 	    	fi
 	else
 		$1
